--- a/css/style.css
+++ b/css/style.css
@@ -1607,7 +1607,7 @@
 .anytix .dialog {
   color: #333;
   min-width: 100%;
-  max-height: calc(37 * var(--font-size));
+  max-height: 90vh;
   overflow-x: hidden;
 }
 .anytix .dialog.fancybox-content {
