--- a/scss/component/_dialog.scss
+++ b/scss/component/_dialog.scss
@@ -2,7 +2,7 @@
     color: $bfDark;
     min-width: 100%;
     // max-height: calc( 37 * var(--font-size) );
-    max-height: 90vh;
+    max-height: 90svh;
     overflow-x: hidden;
 
 
