--- a/css/event.css
+++ b/css/event.css
@@ -1532,7 +1532,7 @@
 .base .dialog {
   color: #333;
   min-width: 100%;
-  max-height: 90vh;
+  max-height: 90svh;
   overflow-x: hidden;
 }
 .base .dialog.fancybox-content {
