--- a/scss/component/_input.scss
+++ b/scss/component/_input.scss
@@ -1,36 +1,40 @@
 .checkbox {
-    padding-top: calc( 0.25 * var(--font-size) );
-    padding-bottom: calc( 0.25 * var(--font-size) );
-    padding-left: calc( 1.75 * var(--font-size) );
+    padding-top: calc(0.25 * var(--font-size));
+    padding-bottom: calc(0.25 * var(--font-size));
+    padding-left: calc(1.75 * var(--font-size));
     position: relative;
+
     [type="checkbox"] {
         display: none;
-        &:checked + label:before {
+
+        &:checked+label:before {
             background-color: $bfPrimary;
             border-color: $bfPrimary;
             background-image: url("./../img/icon/ic-check-white.png");
             background-position: center;
             background-repeat: no-repeat;
-            background-size: calc( 1.2 * var(--font-size) );
+            background-size: calc(1.2 * var(--font-size));
         }
     }
+
     label:before {
         content: "";
         display: inline-block;
-        width: calc( 1.2 * var(--font-size) );
-        height: calc( 1.2 * var(--font-size) );
-        border-radius: calc( 0.25 * var(--font-size) );
+        width: calc(1.2 * var(--font-size));
+        height: calc(1.2 * var(--font-size));
+        border-radius: calc(0.25 * var(--font-size));
         border: 1px solid $bfDarkGray;
         position: absolute;
-        top: calc( 0.25 * var(--font-size) );
+        top: calc(0.25 * var(--font-size));
         left: 0;
         background-color: $bfWhite;
     }
+
     label,
     label a,
     label span {
-        font-size: calc( 0.75 * var(--font-size) );
-        line-height: calc( 1.3 * var(--font-size) );
+        font-size: calc(0.75 * var(--font-size));
+        line-height: calc(1.3 * var(--font-size));
         vertical-align: top;
         color: $bfDark;
     }
@@ -40,52 +44,56 @@
 
 .list-option-wrap {
     width: 100%;
+
     [type="radio"] {
         // display: none;
 
-        &:checked + .list-option-label {
+        &:checked+.list-option-label {
             border-color: $bfPrimary;
             background: url("./../img/icon/ic-check_circle-primary.png");
-            background-size: calc( 1.2 * var(--font-size) );
+            background-size: calc(1.2 * var(--font-size));
             background-repeat: no-repeat;
-            background-position: right calc( 0.75 * var(--font-size) ) top calc( 0.75 * var(--font-size) );
+            background-position: right calc(0.75 * var(--font-size)) top calc(0.75 * var(--font-size));
         }
     }
 }
 
 .list-option-label {
     display: flex;
-    padding: calc( 0.75 * var(--font-size) ) calc( 2 * var(--font-size) ) calc( 0.75 * var(--font-size) ) calc( 0.75 * var(--font-size) );
-    border-radius: calc( 0.5 * var(--font-size) );
-    border: calc( 0.1 * var(--font-size) ) solid $bfLightGray;
-    margin-bottom: calc( 0.6 * var(--font-size) );
+    padding: calc(0.75 * var(--font-size)) calc(2 * var(--font-size)) calc(0.75 * var(--font-size)) calc(0.75 * var(--font-size));
+    border-radius: calc(0.5 * var(--font-size));
+    border: calc(0.1 * var(--font-size)) solid $bfLightGray;
+    margin-bottom: calc(0.6 * var(--font-size));
     text-align: left;
-    font-size: calc( 0.8125 * var(--font-size) );
-    line-height: calc( 1.25 * var(--font-size) );
+    font-size: calc(0.8125 * var(--font-size));
+    line-height: calc(1.25 * var(--font-size));
     vertical-align: middle;
     font-weight: bold;
     background-image: url("./../img/icon/ic-check_circle-lightgray.png");
-    background-size: calc( 1.2 * var(--font-size) );
+    background-size: calc(1.2 * var(--font-size));
     background-repeat: no-repeat;
-    background-position: right calc( 0.75 * var(--font-size) ) top calc( 0.75 * var(--font-size) );
+    background-position: right calc(0.75 * var(--font-size)) top calc(0.75 * var(--font-size));
 }
 
 .input {
-    padding: calc( 0.4 * var(--font-size) ) calc( 1 * var(--font-size) );
+    padding: calc(0.4 * var(--font-size)) calc(1 * var(--font-size));
     border-color: $bfGray;
     border-style: solid;
-    border-width: calc( 0.08 * var(--font-size) );
-    border-radius: calc( .5 * var(--font-size) );
-    font-size: calc( 0.9375 * var(--font-size) );
-    line-height: calc( 1.375 * var(--font-size) );
+    border-width: calc(0.08 * var(--font-size));
+    border-radius: calc(.5 * var(--font-size));
+    font-size: calc(0.9375 * var(--font-size));
+    line-height: calc(1.375 * var(--font-size));
     vertical-align: middle;
     color: $bfDark;
+
     &:focus-visible {
         outline: unset;
     }
+
     &::placeholder {
         color: $bfMediumGray;
     }
+
     &:focus,
     &:active {
         outline: unset;
@@ -99,33 +107,38 @@
     align-items: center;
     flex-wrap: nowrap;
     box-sizing: border-box;
-    .input, input.input {
+
+    .input,
+    input.input {
         width: 100%;
         min-width: unset;
-        padding-left: calc( 2 * var(--font-size) );
+        padding-left: calc(2 * var(--font-size));
         background-image: url("./../img/icon/ic-search-gray.png");
-        background-position: left calc( 0.5 * var(--font-size) ) center;
+        background-position: left calc(0.5 * var(--font-size)) center;
         background-repeat: no-repeat;
-        background-size: calc( 1 * var(--font-size) );
+        background-size: calc(1 * var(--font-size));
         background-color: $bfSoftWhite;
-        padding: calc( 0.25 * var(--font-size) ) calc( 1 * var(--font-size) ) calc( 0.25 * var(--font-size) ) calc( 2 * var(--font-size) );
+        padding: calc(0.25 * var(--font-size)) calc(1 * var(--font-size)) calc(0.25 * var(--font-size)) calc(2 * var(--font-size));
         box-sizing: border-box;
         border-color: $bfSoftWhite;
         border-style: solid;
-        border-width: calc( 0.1 * var(--font-size) );
-        border-radius: calc( 1.5 * var(--font-size) );
-        font-size: calc( 0.9375 * var(--font-size) );
-        line-height: calc( 1.375 * var(--font-size) );
+        border-width: calc(0.1 * var(--font-size));
+        border-radius: calc(1.5 * var(--font-size));
+        font-size: calc(0.9375 * var(--font-size));
+        line-height: calc(1.375 * var(--font-size));
         color: $bfDark;
         display: block;
         flex-grow: 1;
         flex-shrink: 1;
+
         &:focus-visible {
             outline: unset;
         }
+
         &::placeholder {
             color: $bfMediumGray;
         }
+
         &:focus,
         &:active {
             outline: unset;
@@ -137,34 +150,39 @@
 // 複製序號
 .input-wrap {
     box-sizing: border-box;
-    padding: calc( 0.75 * var(--font-size) ) calc( 1 * var(--font-size) );
-    border-radius: calc( 0.5 * var(--font-size) );
-    border: calc( .08 * var(--font-size) ) solid $bfLightGray;
+    padding: calc(0.75 * var(--font-size)) calc(1 * var(--font-size));
+    border-radius: calc(0.5 * var(--font-size));
+    border: calc(.08 * var(--font-size)) solid $bfLightGray;
     display: flex;
     flex-shrink: 0;
     transition: $transition;
     position: relative;
-    & > label:first-of-type {
+
+    &>label:first-of-type {
         flex-grow: 1;
     }
+
     [readonly] {
         color: $bfDark;
         outline: unset;
         border: unset;
         flex-grow: 1;
-        font-size: calc( 0.75 * var(--font-size) );
-        line-height: calc( 1 * var(--font-size) );
+        font-size: calc(0.75 * var(--font-size));
+        line-height: calc(1 * var(--font-size));
         vertical-align: middle;
     }
+
     .input {
-        padding: 0;
+        padding: 0 48px 0 0;
         border-width: 0;
         flex-grow: 1;
-        line-height: calc( 1.25 * var(--font-size) );
+        line-height: calc(1.25 * var(--font-size));
     }
+
     &.active {
         border-color: $bfPrimary;
     }
+
     ::selection {
         background: unset;
         color: $bfDark;
@@ -184,18 +202,20 @@
     flex-shrink: 0;
     align-items: center;
     position: absolute;
-    right: calc( .5 * var(--font-size) );
+    right: calc(.5 * var(--font-size));
     top: 0;
     bottom: 0;
     margin: auto;
+
     img {
-        width: calc( 1.3 * var(--font-size) );
+        width: calc(1.3 * var(--font-size));
     }
+
     span {
-        font-size: calc( 0.75 * var(--font-size) );
-        line-height: calc( 1 * var(--font-size) );
+        font-size: calc(0.75 * var(--font-size));
+        line-height: calc(1 * var(--font-size));
         position: absolute;
-        left: calc( -3.25 * var(--font-size) );
+        left: calc(-3.25 * var(--font-size));
         display: block;
         background: $bfWhite;
         white-space: nowrap;
