--- a/css/style.css
+++ b/css/style.css
@@ -2648,7 +2648,7 @@
   vertical-align: middle;
 }
 .anytix .input-wrap .input {
-  padding: 0 48px 0 0;
+  padding: 0;
   border-width: 0;
   flex-grow: 1;
   line-height: calc(1.25 * var(--font-size));
@@ -2675,7 +2675,6 @@
   display: flex;
   flex-shrink: 0;
   align-items: center;
-  position: absolute;
   right: calc(0.5 * var(--font-size));
   top: 0;
   bottom: 0;
@@ -2687,7 +2686,6 @@
 .anytix .btn-copy span {
   font-size: calc(0.75 * var(--font-size));
   line-height: calc(1 * var(--font-size));
-  position: absolute;
   left: calc(-3.25 * var(--font-size));
   display: block;
   background: #FFF;
