--- a/scss/component/_input.scss
+++ b/scss/component/_input.scss
@@ -175,7 +175,7 @@
     .input {
         padding: 0;
         border-width: 0;
-        flex-grow: 1;
+        // flex-grow: 1;
         line-height: calc(1.25 * var(--font-size));
     }
 
