--- a/css/style.css
+++ b/css/style.css
@@ -2648,9 +2648,11 @@
   vertical-align: middle;
 }
 .anytix .input-wrap .input {
-  padding: 0;
+  padding: 0 52px 0 0;
   border-width: 0;
+  flex-grow: 1;
   line-height: calc(1.25 * var(--font-size));
+  width: 100%;
 }
 .anytix .input-wrap.active {
   border-color: #26d07c;
@@ -2674,6 +2676,7 @@
   display: flex;
   flex-shrink: 0;
   align-items: center;
+  position: absolute;
   right: calc(0.5 * var(--font-size));
   top: 0;
   bottom: 0;
@@ -2685,6 +2688,7 @@
 .anytix .btn-copy span {
   font-size: calc(0.75 * var(--font-size));
   line-height: calc(1 * var(--font-size));
+  position: absolute;
   left: calc(-3.25 * var(--font-size));
   display: block;
   background: #FFF;
