--- a/css/event.css
+++ b/css/event.css
@@ -2413,9 +2413,11 @@
   vertical-align: middle;
 }
 .base .input-wrap .input {
-  padding: 0;
+  padding: 0 52px 0 0;
   border-width: 0;
+  flex-grow: 1;
   line-height: calc(1.25 * var(--font-size));
+  width: 100%;
 }
 .base .input-wrap.active {
   border-color: #26d07c;
@@ -2439,6 +2441,7 @@
   display: flex;
   flex-shrink: 0;
   align-items: center;
+  position: absolute;
   right: calc(0.5 * var(--font-size));
   top: 0;
   bottom: 0;
@@ -2450,6 +2453,7 @@
 .base .btn-copy span {
   font-size: calc(0.75 * var(--font-size));
   line-height: calc(1 * var(--font-size));
+  position: absolute;
   left: calc(-3.25 * var(--font-size));
   display: block;
   background: #FFF;
